# MyQQbot

./: .env.example  .env.prod  .gitignore  LICENSE  README.md  bot.py  pyproject.toml
.cursor/skills/character-card-prompt-polish/: SKILL.md
awesome_bot/plugins/mybot/: __init__.py
plugins/MyBot/: __init__.py  chat_service.py  config.py  memory.py  message_split.py  model.py  private_chat.py
plugins/MyBot/data/character_cards/: tendou_kei.md
scripts/: test_kei_character_chat.py
tools/: __init__.py
tools/activity_context/: README.md  __init__.py  cloud_pull.py  cloud_sync.py  collector.py  context_api.py  daemon.py  readable_timeline.py  start_activity_daemon.bat  storage.py  summarizer.py
tools/activity_context/cloud_server/: README.md  __init__.py  __main__.py  app.py  config.py  db.py  fetcher.py  requirements.txt
