[project]
name = "nds1"
version = "0.1.0"
description = "nds1"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-status>=0.9.0",
    "nonebot_plugin_chatrecorder>=0.7.0",
    "nonebot-plugin-pixivbot>=2.1.6",
]

[tool.nonebot]
plugin_dirs = ["awesome_bot/plugins"]
builtin_plugins = ["echo"]


[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
nonebot_plugin_chatrecorder = ["nonebot_plugin_chatrecorder"]
nonebot-plugin-pixivbot = ["nonebot_plugin_pixivbot"]

